post methodn from index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 
 <p>test get api:</p>
 <ul>
-  <li><a href="/get_images_list">Get files list from RDS data</a></li>
-  <li><a href="/test_rdb_connect">Test RDS connection</a></li>
+  <li><a href="/get_images_list"  target="_blank">Get files list from RDS data</a></li>
+  <li><a href="/test_rdb_connect"  target="_blank">Test RDS connection</a></li>
 </ul>
 
-<h2>Select a file to upload</h2>
-<form method="post" action="/" enctype="multipart/form-data">
+<p>Select a file to upload</p>
+<form method="post" action="/file_upload" enctype="multipart/form-data"  target="_blank">
     <dl>
 		<p>
 			<input type="file" name="file" autocomplete="off" required>
