get random file

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,11 @@
 
 <p>test get api:</p>
 <ul>
-  <li><a href="/get_images_list"  target="_blank">Get files list from RDS data</a></li>
+
   <li><a href="/test_rdb_connect"  target="_blank">Test RDS connection</a></li>
+   <li><a href="/get_images_list"  target="_blank">Get files list from RDS data</a></li> 
+   <li><a href="/get_random_image"  target="_blank">Get random image</a></li>
+    <li><a href="/get_image_by_name"  target="_blank">Get image by name</a></li>
 </ul>
 
 <p>Select a file to upload</p>
