--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,41 @@
 <!doctype html>
 <title>Welcome to AWS RDS S3 test port</title>
 
-<p>test get api:</p>
+
+<fieldset style="width:270px">
+	<legend>test get api</legend>
 <ul>
-
-  <li><a href="/test_rdb_connect"  target="_blank">Test RDS connection</a></li>
-   <li><a href="/get_images_list"  target="_blank">Get files list from RDS data</a></li> 
-   <li><a href="/get_random_image"  target="_blank">Get random image</a></li>
-    <li><a href="/get_image_by_name"  target="_blank">Get image by name</a></li>
+  <li><a href="/api/v1.0/test_rdb_connect"  target="_blank">Test RDS connection</a></li>
+  <br>
+   <li><a href="/api/v1.0/get_images_list"  target="_blank">Get files list from RDS data</a></li> 
+   <li><a href="/api/v1.0/get_random_image"  target="_blank">Get random image</a></li>
 </ul>
+</fieldset>  
+<fieldset style="width:270px">
+	<legend>File search</legend>
+	<p>enter file name (you can use wildcard % for 'like' search)</p>
+	<form method="post" action="/api/v1.0/get_image_by_name"  target="_blank">
+		<dl>
+			<p>
+				<input type="text" name="fname" autocomplete="off" required>
+			</p>
+		</dl>
+		<p>
+			<input type="submit" value="ask file">
+		</p>
+	</form>
+</fieldset>  
 
-<p>Select a file to upload</p>
-<form method="post" action="/file_upload" enctype="multipart/form-data"  target="_blank">
+<fieldset style="width:270px">
+<legend>Select a file to upload to s3</legend>
+<form method="post" action="/api/v1.0/file_upload" enctype="multipart/form-data"  target="_blank">
     <dl>
 		<p>
 			<input type="file" name="file" autocomplete="off" required>
 		</p>
     </dl>
     <p>
-		<input type="submit" value="Submit">
+		<input type="submit" value="Upload file">
 	</p>
 </form>
+</fieldset>
