--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <br>
    <li><a href="/api/v1.0/get_images_list"  target="_blank">Get files list from RDS data</a></li> 
    <li><a href="/api/v1.0/get_random_image"  target="_blank">Get random image</a></li>
+   <li><a href="/subscriptions"  target="_blank">Subscriptions</a></li>
 </ul>
 </fieldset>  
 <fieldset style="width:270px">
