sns subsciptions confirmation

--- a/templates/subscriptions.html
+++ b/templates/subscriptions.html
@@ -9,7 +9,7 @@
 	<p>Put email to subscribe un-subscribe from S3 notifiacations</p>
 	<form method="post" action="/api/v1.0/subscribe">
 			<p>
-				<input type="text" name="email" autocomplete="off" required>
+				<input type="text" name="email" value="xxx@mail.ru" autocomplete="off" required>
 			</p>
 			<p>
 				<input type="checkbox" id="IsSubscr" name="IsSubscr" value="true">
