un-subscibe and list_subscriptions functionality

--- a/templates/subscriptions.html
+++ b/templates/subscriptions.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>s3 Event Subscriptions</title>
 
+<li><a href="/api/v1.0/list_subscriptions"  target="_blank">List subscriptions</a></li>
 
 
 <fieldset style="width:270px">
